feat: basic theming setup completed

--- a/projects/starter-app/src/styles.scss
+++ b/projects/starter-app/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@700&display=swap');
+
+@import './styles/_variables.scss';
+@import './styles/_mixins.scss';
+@import './styles/_global.scss';
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+.button-primary {
+  background-color: var(--primary);
+  color: var(--background);
+  border-radius: var(--radius-sm)
+}
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-primary font-body;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-heading;
+  }
+}
