feat: custom fonts and breakpoint added

--- a/projects/starter-app/src/app/app.component.html
+++ b/projects/starter-app/src/app/app.component.html
@@ -1,19 +1,23 @@
-<h1>Starter Template</h1>
-<button class=" rounded rounded-md bg-primary text-background px-4 py-2 font-bold">
-  Primary
-</button>
-<button class=" rounded rounded-md bg-secondary text-background px-4 py-2 font-bold">
-  Secondary
-</button>
-<button class=" rounded rounded-md bg-accent text-background px-4 py-2 font-bold">
-  Accent
-</button>
-<button class=" rounded rounded-md bg-background text-primary px-4 py-2 font-bold">
-  Background
-</button>
-<button class=" rounded rounded-md bg-base text-background px-4 py-2 font-bold">
-  Base
-</button>
-<button class=" rounded rounded-md bg-muted text-background px-4 py-2 font-bold">
-  Muted
-</button>
+<h1 class="text-title">Title</h1>
+<h4 class="text-subtitle font-body">Subtitle</h4>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, veniam.</p>
+<div class="flex gap-2">
+  <button class=" rounded rounded-md bg-primary text-background px-4 py-2 font-bold">
+    Primary
+  </button>
+  <button class=" rounded rounded-md bg-secondary text-background px-4 py-2 font-bold">
+    Secondary
+  </button>
+  <button class=" rounded rounded-lg bg-accent text-background px-4 py-2 font-bold">
+    Accent
+  </button>
+  <button class=" rounded rounded-lg bg-background text-primary px-4 py-2 font-bold">
+    Background
+  </button>
+  <button class=" rounded rounded-sm bg-base text-background px-4 py-2 font-bold">
+    Base
+  </button>
+  <button class=" rounded rounded-none bg-muted text-background px-4 py-2 font-bold">
+    Muted
+  </button>
+</div>
