--- a/projects/starter-app/src/styles.scss
+++ b/projects/starter-app/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@700&display=swap');
+@import './styles/_fonts.scss';
 
 @import './styles/_variables.scss';
 @import './styles/_mixins.scss';
